Prevent overflow

--- a/DevBlogFrontend/Shared/MainLayout.razor.css
+++ b/DevBlogFrontend/Shared/MainLayout.razor.css
@@ -5,4 +5,5 @@
 
 #centered {
   max-width: 600px;
+  word-wrap: break-word;
 }
